# ZJUTAscendAltasExperiment

./: .gitattributes  .gitignore
Experiment/: hardware-demo.rar  setenv.sh
Experiment/hardware-demo/: Makefile
Experiment/hardware-demo/code/: main.py
Experiment/hardware-demo/inc/: adxl345.h  demo_ili9488.h  ds1339u.h  font.h  image_circle.h  image_square.h  image_triangle.h  key.h  lcd_driver.h  lcd_font.h  lcd_gui.h  serial_listener.h  task.h
Experiment/hardware-demo/scripts/: param.conf
Experiment/hardware-demo/src/: CMakeLists.txt  adxl345.c  key.c  lcd_driver.c  lcd_gui.c  main.cpp  pca9557.c  serial_listener.c  spidevtest.c  ssd1306.c  task.c  v4l2.c
Experiment/yolov3-demo/: Makefile
Experiment/yolov3-demo/scripts/: param.conf
Experiment/yolov3-demo/src/: CMakeLists.txt  main.cpp  object_detect.cpp
